addons/prometheus-operator/monitoring-stack/resources/prometheus-operator/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-operator-monitoring
  namespace: NAMESPACE
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 0
      protocol: TCP
